Add store transaction endpoints
